[tool.poetry]
name = "web-hw-5"
version = "0.1.0"
description = ""
authors = ["FitisovArtem <109963097+FitisovArtem@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"
websockets = "^12.0"
names = "^0.3.0"
aiofile = "^3.8.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
